small change in grokexporter config file

--- a/blackbox_app_metrics_exporter_with_prometheus_and_k8s/grok_exporter/grok-exporter-configmap.yaml
+++ b/blackbox_app_metrics_exporter_with_prometheus_and_k8s/grok_exporter/grok-exporter-configmap.yaml
@@ -11,7 +11,7 @@ data:
       type: file
       fail_on_missing_logfile: false
       path: /usr/share/app_log/app.log
-      readall: true
+      readall: false
     grok:
       patterns_dir: ./patterns
     metrics:
