--- a/abhk8s/resources/ots/k8s_deployment.yaml
+++ b/abhk8s/resources/ots/k8s_deployment.yaml
@@ -4,9 +4,7 @@ metadata:
   name: onetimesecret
   namespace: internal
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       run: onetimesecret
@@ -17,29 +15,20 @@ spec:
     type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         run: onetimesecret
     spec:
-      containers:
-      - env:
+      containers:      
+      - name: onetimesecret
+        image: atlantbh/onetimesecret
+        imagePullPolicy: Always
+        env:
         - name: DOMAIN
           value: ots.abhapp.com
         - name: SSL
           value: "true"
         - name: test
           value: test
-        image: atlantbh/onetimesecret
-        imagePullPolicy: Always
-        name: onetimesecret
         ports:
         - containerPort: 7143
           protocol: TCP
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
