--- a/deploy_application_to_kubernetes_with_helm/nginx-app/values.yaml
+++ b/deploy_application_to_kubernetes_with_helm/nginx-app/values.yaml
@@ -45,16 +45,16 @@ ingress:
   ui:
     enabled: true
     annotations:
-      cert-manager.io/cluster-issuer: letsencrypt-logisticsmt
+      cert-manager.io/cluster-issuer: letsencrypt-test
       kubernetes.io/ingress.class: nginx
     hosts:
-      - host: test-app.logistics.abhapp.com
+      - host: test-app.example.com
         paths:
           - "/"
     tls:
-    - secretName: tls-test-app-dev
+    - secretName: tls-test-app
       hosts:
-        - test-app.logistics.abhapp.com
+        - test-app.example.com
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
